SFDCProject/src/objects/Workflow_Creation_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Template_Name__c</fullName>
        <formula>Dependent_Task_Template__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Task Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dependent Task Template</label>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Workflow Creation Rules</relationshipLabel>
        <relationshipName>Workflow_Creation_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name1__c</fullName>
        <label>Field Name1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name2__c</fullName>
        <label>Field Name2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name3__c</fullName>
        <label>Field Name3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value1__c</fullName>
        <label>Field Value1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value2__c</fullName>
        <label>Field Value2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value3__c</fullName>
        <label>Field Value3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name1__c</fullName>
        <label>Object Name1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name2__c</fullName>
        <label>Object Name2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name3__c</fullName>
        <label>Object Name3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Category__c</fullName>
        <formula>TEXT( Dependent_Task_Template__r.Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Category</label>
        <type>Text</type>
    </fields>
    <label>Workflow Creation Rule</label>
    <listViews>
        <fullName>ACE</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <columns>Object_Name1__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Object_Name2__c</columns>
        <columns>Field_Name2__c</columns>
        <columns>Field_Value2__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Value1__c</field>
            <operation>equals</operation>
            <value>ACE</value>
        </filters>
        <label>ACE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Field_Name2__c</columns>
        <columns>Field_Value2__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NJ_Utilities</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <columns>Object_Name1__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Object_Name2__c</columns>
        <columns>Field_Name2__c</columns>
        <columns>Field_Value2__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Value1__c</field>
            <operation>equals</operation>
            <value>JCP&amp;L,Rockland Electric,ACE,PSE&amp;G</value>
        </filters>
        <label>NJ Utilities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NV_Energy_South</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <columns>Object_Name1__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Object_Name2__c</columns>
        <columns>Field_Name2__c</columns>
        <columns>Field_Value2__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Value1__c</field>
            <operation>equals</operation>
            <value>NV Energy South</value>
        </filters>
        <label>NV Energy South</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SCE</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <columns>Object_Name1__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Object_Name2__c</columns>
        <columns>Field_Name2__c</columns>
        <columns>Field_Value2__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Value1__c</field>
            <operation>equals</operation>
            <value>SCE</value>
        </filters>
        <label>SCE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Schedule_Installation</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dependent_Task_Template_Name__c</field>
            <operation>contains</operation>
            <value>Schedule Installation</value>
        </filters>
        <label>Schedule Installation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>State_Criteria</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <columns>Object_Name1__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Object_Name2__c</columns>
        <columns>Field_Name2__c</columns>
        <columns>Field_Value2__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name2__c</field>
            <operation>equals</operation>
            <value>State__c</value>
        </filters>
        <label>State Criteria</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Submit_Final_Interconnection</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Task_Template__c</columns>
        <columns>Field_Name1__c</columns>
        <columns>Field_Value1__c</columns>
        <columns>Action__c</columns>
        <columns>Template_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dependent_Task_Template_Name__c</field>
            <operation>contains</operation>
            <value>Submit Final Interconnection</value>
        </filters>
        <label>Submit Final Interconnection</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Workflow Creation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Creation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>